[gd_scene load_steps=9 format=3 uid="uid://ie2lhef8v24h"]

[ext_resource type="Script" path="res://jogo/assets/Buildings/PoisonTower/PoisonTower.gd" id="1_4um8s"]
[ext_resource type="Texture2D" uid="uid://de7sa8xqp6vp3" path="res://jogo/assets/Buildings/PoisonTower/poison tower.png" id="2_fiijm"]

[sub_resource type="Animation" id="Animation_yd33j"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cdjlb"]
_data = {
"die": SubResource("Animation_yd33j")
}

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ligvf"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8s6rf"]
resource_local_to_scene = true
transparency = 1
albedo_texture = ExtResource("2_fiijm")
uv1_scale = Vector3(3, 2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_uqpnt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1ewae"]
size = Vector3(3, 1, 3)

[node name="PoisonTower" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_4um8s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cdjlb")
}

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ligvf")

[node name="Mesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_8s6rf")
mesh = SubResource("BoxMesh_uqpnt")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_1ewae")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
